# BioInformed

./: .gitignore  README.md  check_gpu.py  pyproject.toml  run_experiments.sh  smoke_test.py
configs/: baseline.yaml  default.yaml
src/: __init__.py  dataset.py  dataset_fast.py  evaluate.py  losses.py  preprocess.py  train.py
src/model/: __init__.py  density_estimator.py  unet2d.py
