[project]
name = "biophysics-informed-seg"
version = "0.1.0"
description = "2D reproduction of Biophysics Informed Pathological Regularisation for Brain Tumour Segmentation"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "numpy>=1.24.0",
    "nibabel>=5.0.0",
    "monai>=1.3.0",
    "scipy>=1.10.0",
    "scikit-image>=0.21.0",
    "pyyaml>=6.0",
    "tqdm>=4.65.0",
    "tensorboard>=2.14.0",
]

[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
torchvision = { index = "pytorch-cu121" }
